tests/fixtures/invalid/round_3_args.py
# round() takes at most 2 arguments, got 3
x = round(1, 1, 1)
